--- a/src/assets/css/caller.css
+++ b/src/assets/css/caller.css
@@ -1,5 +1,5 @@
 .caller {
-  box-shadow: inset 0px -40px 50px 30px rgb(255, 255, 255);
+  box-shadow: inset 0px -30px 50px 30px rgb(255, 255, 255);
   background-image: url(../images/caller.jpg);
   height: 30rem;
   background-size: cover;
