--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,10 +1,9 @@
 .footer-container {
   background-color: var(--color-gray);
-  height: 5vh;
+  height: 5rem;
   display: flex;
   justify-content: center;
   justify-self: flex-end;
-  margin-top: 2rem;
 }
 
 .footer-content {
