--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,15 +1,13 @@
 .main {
   min-height: calc(100vh - 13vh - 40px);
-  /* position: relative; */
+  position: relative;
   display: flex;
   flex-direction: column;
 }
 
 .main-content-container {
-  /* position: relative;
-  top: -4.3rem; */
-  width: 100%;
-  min-height: 100%;
+  position: relative;
+  top: -4.3rem;
   text-align: center;
   display: grid;
   grid-template-columns: 60vw;
@@ -24,9 +22,9 @@
 }
 
 .main-fineprint {
-  /* position: relative; */
+  position: relative;
   font-size: 1.35rem;
   color: var(--color-light-gray);
   text-align: center;
-  /* top: 2rem; */
+  top: 2rem;
 }
